--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "prettier": "^1.18.2"
+  },
+  "dependencies": {
+    "xmlhttprequest": "^1.8.0"
   }
 }
