--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@tensorflow-models/knn-classifier": "^1.2.1",
     "@tensorflow/tfjs": "^1.2.11",
+    "bootstrap-sass": "^3.4.1",
     "firebase": "^7.2.0",
     "firebase-tools": "^7.5.0",
     "fs": "^0.0.1-security",
